--- a/core/src/main/assets/messages/items/items_zh.properties
+++ b/core/src/main/assets/messages/items/items_zh.properties
@@ -1238,7 +1238,7 @@ items.scrolls.exotic.scrollofmetamorphosis.intype=此类型包含以下天赋，
 items.scrolls.exotic.scrollofmetamorphosis.replace_desc=选择你希望蜕变出的天赋
 items.scrolls.exotic.scrollofmetamorphosis.cancel_warn=取消该行动仍然会消耗你的蜕变秘卷，你确定吗？
 items.scrolls.exotic.scrollofmetamorphosis.metamorphose_talent=蜕变天赋
-items.scrolls.exotic.scrollofmetamorphosis.desc=这张秘卷充满了嬗变的魔力，不过与一般的嬗变卷轴不同。这股魔力将作用于释放者本身而不是一个物品。秘卷的魔力将允许你蜕变一个自身的天赋，使其转化为来自其他英雄的五个同层天赋之一！\n\n这个效果只适用于英雄自身的天赋，对专精天赋与护甲天赋无效。那些你无法使用的天赋将不会出现在蜕变选项里。
+items.scrolls.exotic.scrollofmetamorphosis.desc=这张秘卷充满了嬗变的魔力，不过与一般的嬗变卷轴不同。这股魔力将作用于释放者本身而不是一个物品。秘卷的魔力将允许你蜕变一个自身的天赋，使其转化为另一个任意的同层天赋！\n\n这个效果只适用于英雄自身的天赋，对专精天赋与护甲天赋无效。那些你无法使用的天赋将不会出现在蜕变选项里。
 
 items.scrolls.exotic.scrollofmysticalenergy.name=魔能秘卷
 items.scrolls.exotic.scrollofmysticalenergy.desc=奇异的魔法能量被禁锢在秘卷羊皮纸内，当这股能量被释放时会在短时间内持续为阅读者的所有神器充能。
@@ -2431,7 +2431,7 @@ items.scrollofsublimation.choose_desc=选择一个天赋以进行蜕变
 items.scrollofsublimation.replace_desc=选择你希望得到的Boss天赋
 items.scrollofsublimation.metamorphose_talent=取得天赋
 #DM216：描述更改
-items.scrollofsublimation.desc=这张秘卷吸收了%s的能力，不过与一般的蜕变秘卷不同，这张秘卷的魔力将允许你选择一个Boss天赋为己所用！此外还会给予1点天赋点供你分配。\n\n注意：\n_5层Boss_和_10层Boss_的Boss天赋在_1层_，_15层Boss_和_20层Boss_的Boss天赋在_2层_，_25层Boss_的Boss天赋在_3层_。\n_5层Boss_提供的天赋点在_1层_，_10层Boss_和_15层Boss_提供的天赋点在_2层_，_20层Boss_和_25层Boss_提供的天赋点在_3层_。
+items.scrollofsublimation.desc=这张秘卷吸收了%s的能力，与一般的蜕变秘卷不同，这张秘卷的魔力将允许你选择一个Boss天赋为己所用！此外还会给予1点天赋点供你分配。\n\n注意：\n_5层和10层Boss_的Boss天赋在_1层_。\n_15层和20层Boss_的Boss天赋在_2层_。\n_25层Boss_的Boss天赋在_3层_。\n_5层Boss_提供的天赋点在_1层_。\n_10层和15层Boss_提供的天赋点在_2层_。\n_20层和25层Boss_提供的天赋点在_3层_。
 items.scrollofsublimation.warning=确认放弃释放卷轴的效果吗？放弃不消耗卷轴。
 items.scrollofsublimation.ac_read=阅读
 items.scrollofsublimation.discover_hint=你可从某种敌人的掉落物中获得该物品。
@@ -2582,43 +2582,54 @@ items.armor.ninjaarmor.name=英雄忍甲
 items.armor.ninjaarmor.desc=装备这件只有上忍才能装备的忍者铠甲时，忍者能够施展一项特殊技能。
 
 items.artifacts.instructiontool.name=指令集合工具
-items.artifacts.instructiontool.ac_make=使用
+items.artifacts.instructiontool.ac_make=生产
 items.artifacts.instructiontool.ac_enter=录入
-items.artifacts.instructiontool.ac_guide=指引
-items.artifacts.instructiontool.need_to_equip=装备指令集合工具才能使用其功能。
+items.artifacts.instructiontool.ac_guide=指挥
+items.artifacts.instructiontool.need_to_equip=你需要装备指令集合工具才能使用其功能。
 items.artifacts.instructiontool.cursed=你不能使用被诅咒的指令集合工具。
-items.artifacts.instructiontool.no_charge=充能不足，无法使用
-items.artifacts.instructiontool.more_drone=无人机数量超出充能上限，无法使用
-items.artifacts.instructiontool.desc=这套工具可以调用DM-400的指令集合以生产无人机协助其作战。
-items.artifacts.instructiontool.desc_cursed=被诅咒的指令集合工具无法指挥和制造无人机。
-items.artifacts.instructiontool.desc_equipped=指令集合工具可以录入升级卷轴进行升级，升级后会提高充能上限并强化其产生的所有无人机。
-items.artifacts.instructiontool.desc_noenter=\n\n当前尚无法录入更多信息，可以生产的无人机为僚机无人机
-items.artifacts.instructiontool.desc_enter=\n\n当前已录入_%s_，可以生产的其他类型_%s_。
-items.artifacts.instructiontool.no_drone=没有无人机需要指引。
-items.artifacts.instructiontool.selectdrone=选择需要指引的无人机
-items.artifacts.instructiontool.direct_prompt=选择该无人机目标
+items.artifacts.instructiontool.no_charge=充能不足，无法使用。
+items.artifacts.instructiontool.more_drone=当前的充能不足以生产更多无人机。
+items.artifacts.instructiontool.desc=这套工具可以调用DM-400的指令集合以生产无人机协助其作战。通常点击相邻的无人机可与其进行换位，而点击不相邻的无人机则可单独指挥其行动。\n\n当工具处于可被充能的状态时，可通过功能菜单了解功能详情，也可直接通过功能菜单使用“回收指定无人机”和“指挥全体无人机”的功能。
+items.artifacts.instructiontool.desc_cursed=被诅咒的指令集合工具无法生产和指挥无人机。
+items.artifacts.instructiontool.desc_equipped=指令集合工具可以录入升级卷轴进行升级，升级后会提高充能上限并强化其生产的大部分无人机。
+items.artifacts.instructiontool.desc_noenter=\n\n当前尚未录入更多信息，可以生产的无人机为_僚机无人机_。
+items.artifacts.instructiontool.desc_enter=\n\n当前已录入%s，可以生产的无人机为%s。
+items.artifacts.instructiontool.no_drone=当前未生产任何无人机。
+items.artifacts.instructiontool.selectdrone=选择需要指挥的无人机
+items.artifacts.instructiontool.direct_prompt=选择无人机的目标
 items.artifacts.instructiontool.less=空间过小，无法生产无人机。
 items.artifacts.instructiontool.usecharge=当前已经生产_%s_架无人机，此次使用将会消耗_%s_点充能。
-items.artifacts.instructiontool.usecharge2=当前未生产无人机，此次使用将会消耗1点充能。
+items.artifacts.instructiontool.usecharge2=当前未生产任何无人机，此次使用将会消耗_1_点充能。
 items.artifacts.instructiontool.prompt=录入卷轴
-items.artifacts.instructiontool.unable_scroll=无法录入该卷轴
-items.artifacts.instructiontool.unknown_scroll=无法录入未知卷轴
+items.artifacts.instructiontool.unable_scroll=无法录入该卷轴。
+items.artifacts.instructiontool.unknown_scroll=无法录入未知卷轴。
 items.artifacts.instructiontool.discover_hint=某位英雄初始携带该物品。
+items.artifacts.instructiontool.action=指挥
+items.artifacts.instructiontool.prompt2=此处是功能菜单，可以查看功能详情以及使用“回收指定无人机”和“指挥全体无人机”的功能。\n_回收：_选择一个指定无人机进行回收，若该无人机当前生命高于最大生命值的80%则返还1点工具充能。\n_游荡：_点击任意无人机使全体无人机进入游荡状态(也可双击不与玩家相邻的无人机进行独立游荡)。\n_跟随：_点击玩家使全体无人机进入跟随状态(也可单击不与玩家相邻的无人机后点击玩家进行独立跟随)。\n_锁定：_点击敌人使全体无人机进行锁定(也可单击不与玩家相邻的无人机后点击敌人进行独立锁定)。\n_待命：_点击地格使全体无人机进行待命(也可单击不与玩家相邻的无人机后点击地格进行独立待命)。
+items.artifacts.instructiontool.direct_prompt3=回收指定无人机
+items.artifacts.instructiontool.huishou=回收指定无人机
+items.artifacts.instructiontool.guide=指挥全体无人机
+items.artifacts.instructiontool.create=生产无人机
+items.artifacts.instructiontool.create2=可以生产以下类型无人机
 items.artifacts.instructiontool$instructionmark.name=指令标记
-items.artifacts.instructiontool$instructionmark.desc=该敌人已被DM-400进行标记。\n\nDM-400的物理攻击可以标记受其攻击的敌人一段时间，在此期间的所有攻击型无人机的攻击都会对该单位产生额外效果。\n标记回合：%s回合
-items.artifacts.instructiontool$instructionmark.desc_at=该敌人已被AT-400标记为重点打击对象。\n\n标记存在期间，该敌人受到AT-400的攻击伤害增加30%%(这不会使得攻击型无人机造成的伤害增加)。\n标记回合：%s回合
-items.artifacts.instructiontool$instructionmark.desc_au=该敌人已被AU-400标记为高度危险对象。\n\n标记存在期间，该敌人对AU-400的攻击伤害降低20%%(这不会使得辅助型无人机受到的伤害降低)。\n标记回合：%s回合
+items.artifacts.instructiontool$instructionmark.desc=该敌人已被DM-400进行标记。\n\nDM-400的物理攻击可以标记受其攻击的敌人一段时间，在此期间的所有攻击型无人机的攻击都会对该单位产生额外效果。\n\n标记回合数：%s回合
+items.artifacts.instructiontool$instructionmark.desc_at=该敌人已被AT-400标记为重点打击对象。\n\n标记存在期间，该敌人受到AT-400的攻击伤害增加30%%(这不会使得攻击型无人机造成的伤害增加)。\n\n标记回合数：%s回合
+items.artifacts.instructiontool$instructionmark.desc_au=该敌人已被AU-400标记为高度危险对象。\n\n标记存在期间，该敌人对AU-400的攻击伤害降低20%%(这不会使得辅助型无人机受到的伤害降低)。\n\n标记回合数：%s回合
 items.artifacts.instructiontool$drone.name=僚机无人机
-items.artifacts.instructiontool$drone.desc=最基础的战斗型无人机。近战单位，击带有“指令标记”的敌人时可以无视其防御。
+items.artifacts.instructiontool$drone.desc=初始可供生产的基础无人机，拥有最基本的战斗性能，以及较为优秀的防护能力。\n\n拥有少量初始护甲，攻击带有指令标记效果的敌人时会无视其护甲，当工具录入除升级以外的其他卷轴后自动变化为对应无人机。
 items.artifacts.instructiontool$drone.direct_defend=准备前往目标地点待命。
 items.artifacts.instructiontool$drone.direct_follow=准备返航。
 items.artifacts.instructiontool$drone.direct_attack=已锁定目标。
-items.artifacts.instructiontool$drone.discover_hint=使用特殊神器可以发现该单位。
+items.artifacts.instructiontool$drone.direct_wander=自动巡逻中。
+items.artifacts.instructiontool$drone.discover_hint=可以使用特殊神器发现该单位。
 
 items.weapon.missiles.damagegear.name=废弃齿轮
-items.weapon.missiles.damagegear.stats_desc=除了可以投掷敌人，还可以被DM-400拿来“修复”自身以恢复_剩余耐久点血量_。
+items.weapon.missiles.damagegear.stats_desc=这件武器除了用于投掷，还可以被DM-400用于修复自身以恢复对应耐久的生命，只是通过修复恢复的生命总量不会超过当前最大生命值的一半。
 items.weapon.missiles.damagegear.desc=不知从何处收集来的废弃零件，拿在手中能明显感受到重量。除了将其砸向敌人以外或许还可以修复些什么。
 items.weapon.missiles.damagegear.ac_fix=修复
 items.weapon.missiles.damagegear.discover_hint=某位英雄初始携带该物品。
 
-
+items.remains.brokentool.name=损坏控件
+items.remains.brokentool.desc=这块已经损坏的金属控件曾经是某个机械造物所使用的工具。尽管有些不合常理，你仍可尝试连接这些外露电线以此来短暂地使用它，你可以用它产生一个与你完全相同的镜像。但在使用后，也就是电信号流通一瞬，它就会彻底失灵并随之碎裂而烟消云散。
+items.armor.dm400armor.name=英雄装甲
+items.armor.dm400armor.desc=装备这套高性能装甲时，DM-400能够施展一项特殊技能。
