--- a/core/src/main/assets/messages/journal/journal_zh.properties
+++ b/core/src/main/assets/messages/journal/journal_zh.properties
@@ -194,11 +194,12 @@ journal.document.backs.shopkeeper.body=其一\n这个下水道到处都是恶臭
 
 journal.document.hero.title=英雄故事
 journal.document.hero.slimegril.title=智识，情感，史莱姆
-journal.document.hero.slimegril.body=第一次...记忆读取尝试...\n“...队长...快...再坚持一会儿...我...们很快...就能离...开这里了...”\n“不...不用管我了...继续顺着...那条路...走下去...找到...出口...”\n识别...一名人类女性...属于这副躯体...一名人类男性...这副躯体的交谈对象...关系推测...伙伴？\n\n第二次记忆读取尝试，声带修复得差不多，已经能较流畅地发声了。\n“该死，为什么...为什么偏偏会遇到这种事...我要离开这个可怕的地方，离开这个肮脏的下水道！”\n“呜...队长...对不起...”\n确认前面提到的男性对象死亡，这副躯体出现强烈情绪波动...“情绪”？理解不能...\n\n第三次记忆读取尝试。\n“(书写)相·当·不·对·劲...嗯，就写下这么多吧...等等，那个怪物...竟然追上来了？！不...不要！”\n“咳——！好痛...眼睛...眼睛睁不开了...”\n“爸...妈...队长...大家...对不起...”\n桑雅...吗？看来这个木牌子上写的就是“我”原来的名字吧\n好奇怪的感觉，这种感觉是什么呢？好像是一种叫做“不甘”的情感...\n\n春至十六日...叁柒陆年...如果没推算错误的话，就是这个日期了。\n现在，我的名字是：艾米娅·丝莱尔。
+journal.document.hero.slimegril.body=第一次...记忆读取尝试...\n“...队长...快...再坚持一会儿...我...们很快...就能离...开这里了...”\n“不...不用管我了...继续顺着...那条路...走下去...找到...出口...”\n识别...一名人类女性...属于这副躯体...一名人类男性...这副躯体的交谈对象...关系推测...伙伴？\n\n第二次记忆读取尝试，声带修复得差不多，已经能较流畅地发声了。\n“该死，为什么...为什么偏偏会遇到这种事...我要离开这个可怕的地方，离开这个肮脏的下水道！”\n“呜...队长...对不起...”\n确认前面提到的男性对象死亡，这副躯体出现强烈情绪波动...“情绪”？理解不能...\n\n第三次记忆读取尝试。\n“(书写)相·当·不·对·劲...嗯，就写下这么多吧...等等，那个怪物...竟然追上来了？！不...不要！”\n“咳——！好痛...眼睛...眼睛睁不开了...”\n“爸...妈...队长...大家...对不起...”\n桑雅...吗？看来这个木牌子上写的就是“我”原来的名字吧\n好奇怪的感觉，这种感觉是什么呢？好像是一种叫做“不甘”的情感...\n\n春至十六日...叁柒柒年...如果没推算错误的话，就是这个日期了。\n现在，我的名字是：艾米娅・丝莱尔。
 
 journal.document.hero.ninja.title=村落，护符，忍者
-journal.document.hero.ninja.body=战国，村落，忍者\n随着不落城的陷落，战国时代已然终结，兵役与军功再也无法抵扣村中的赋税。这几年村子连遭旱灾和台风的摧残，连四公六民的赋税都难以缴足。今年村里不知又要饿死多少人...我必须想出办法，一定要拯救村落。\n\n天狗，面具，叛徒\n几十年前，村里曾出一位不世出的忍者奇才，精通手里剑，更擅用火药和制炸弹。可他却偷走了神社中供奉的面具，从此消失无踪。自那以后，村中人烟日渐稀少，饿殍与日俱增。村长总说，是天狗盗走面具，触怒了御社神，才为村落招来神罚。我发誓，定要将他碎尸万段。\n\n南蛮商人，铁炮，护符\n近日村里来了一位南蛮商人，贩卖各式货物，从日常用品到令人闻风丧胆的战场杀器——“铁炮”。我曾亲眼见识它的可怕，我的同伴阿吉就是因它而死。商人说，一挺铁炮价值五十贯，相当于一位武士的卖官价。若拥有它，我或许能比天狗更强。\n南蛮商人见村子困顿，提起一则关于“护符”的传说——那是一件能实现任何愿望的宝物，而他下一站正要前往西幻大陆探寻那护符的踪迹。我苦苦哀求，他终于答应带我同行。我一定要取得护符，拯救村落。\n\n夏归五日...叁柒肆年...启航！
-
+journal.document.hero.ninja.body=战国，村落，忍者\n随着不落城的陷落，战国时代已然终结，兵役与军功再也无法抵扣村中的赋税。这几年村子连遭旱灾和台风的摧残，连四公六民的赋税都难以缴足。今年村里不知又要饿死多少人...我必须想出办法，一定要拯救村落。\n\n天狗，面具，叛徒\n几十年前，村里曾出一位不世出的忍者奇才，精通手里剑，更擅用火药和制炸弹。可他却偷走了神社中供奉的面具，从此消失无踪。自那以后，村中人烟日渐稀少，饿殍与日俱增。村长总说，是天狗盗走面具，触怒了御社神，才为村落招来神罚。我发誓，定要将他碎尸万段。\n\n南蛮商人，铁炮，护符\n近日村里来了一位南蛮商人，贩卖各式货物，从日常用品到令人闻风丧胆的战场杀器——“铁炮”。我曾亲眼见识它的可怕，我的同伴阿吉就是因它而死。商人说，一挺铁炮价值五十贯，相当于一位武士的买官价。若拥有它，我或许能比天狗更强。\n南蛮商人见村子困顿，提起一则关于“护符”的传说——那是一件能实现任何愿望的宝物，而他下一站正要前往西幻大陆探寻那护符的踪迹。我苦苦哀求，他终于答应带我同行。我一定要取得护符，拯救村落。\n\n夏归五日...叁柒肆年...启航！
+journal.document.hero.dm400.title=日志v1.4.5
+journal.document.hero.dm400.body=法历壹肆伍年肆月陆日(批注：春历叁柒伍年陆日)\n“我们的城邦没落了...”，这是我病重的父亲死前所说的最后一句话。\n先说明一下，我是来自地上的矮人，名叫提穆尔・罗伯，若有人正阅读这一信息，那就意味着我制作的人形机器大概已经损毁了，只是不知它是否到达了“矮人都城”呢？\n\n关于我的身世，得从一百多年前说起了。\n那时我的祖父还年轻，父亲还年幼，他们就生活在地下的“矮人都市”中，而之后发生了什么，想必正在阅读的你也清楚了。\n他们与一小部分矮人幸存者从那里出逃到了地上，随后我的父亲与一位矮人女性相爱，最后诞下了我。\n当然，一切只是到这的话，我想你也不会见到这个人形机器了。\n\n这个人形机器的型号为DM-400，而它前往地下的目的是探索已经没落的“矮人都市”。\n我的祖父病逝时是143岁，而我的父亲病逝时是117岁，如今我堪堪64岁，身体却已出现了与我的祖父、我的父亲甚至是和其他幸存者一样的病症...我想，我们大概是被诅咒了。\n\n正在阅读这些信息的你，无论你是冒险者还是幸存者，我都希望你能将这份信息以及DM-400内部记录的其他日志传递出去，用以警示世人，乃至揭露地下的真相。\n......\n(私密记录)“DM-400，你是我此生最伟大的杰作...正因如此，我相信你能够到达那个地方。哪怕未能传递这一切，未能带回护符，我都希望你能...活下去。”\n“......我明白了，先生。”
 
 journal.notes$landmark.shop=商店
 journal.notes$landmark.alchemy=炼金釜
