--- a/core/src/main/assets/messages/misc/misc_zh.properties
+++ b/core/src/main/assets/messages/misc/misc_zh.properties
@@ -262,6 +262,8 @@ badges$badge.unlock_slime.title=解锁史莱姆娘！
 badges$badge.unlock_slime.desc=击败粘咕以解锁史莱姆娘
 badges$badge.unlock_ninja.title=解锁忍者！
 badges$badge.unlock_ninja.desc=击败天狗以解锁忍者
+badges$badge.unlock_dm400.title=解锁DM-400！
+badges$badge.unlock_dm400.desc=击败DM-300以解锁DM-400
 badges$badge.heroboss_slain_1.title=饭桶终结者
 badges$badge.heroboss_slain_1.desc=击败战士？
 badges$badge.heroboss_slain_2.title=缉拿归案
@@ -272,5 +274,7 @@ badges$badge.heroboss_counter_1.title=手足不相惜
 badges$badge.heroboss_counter_1.desc=在一局游戏中作为史莱姆娘击败粘咕
 badges$badge.heroboss_counter_2.title=忍者？忍者为何？！
 badges$badge.heroboss_counter_2.desc=在一局游戏中作为忍者击败天狗
+badges$badge.heroboss_counter_3.title=我可是高性能的
+badges$badge.heroboss_counter_3.desc=在一局游戏中作为DM-400击败DM-300
 challenges.test_mode=测试时间
 challenges.test_mode_desc=追加选项，测试时间！\n注意，目前大概还存在一些内容缺失、资料错误等问题\n\n-你可以自由生成物品，自由移动，生成敌人\n-在测试模式下，挑战的小图标会被替换，用于指示测试模式\n-测试模式不计入排行榜
