--- a/core/src/main/assets/messages/custom/custom_zh.properties
+++ b/core/src/main/assets/messages/custom/custom_zh.properties
@@ -1178,6 +1178,10 @@ custom.testmode.mobplacer.elite_name2=祝福精英
 custom.testmode.mobplacer.elite_name3=巨型精英
 custom.testmode.mobplacer.elite_name4=成长精英
 custom.testmode.mobplacer.elite_name5=索敌精英
+custom.testmode.mobplacer.elite_name6=腐蚀精英
+custom.testmode.mobplacer.elite_name7=迅捷精英
+custom.testmode.mobplacer.elite_name8=神圣精英
+custom.testmode.mobplacer.elite_name9=蜕变精英
 
 custom.testmode.enemyattributemodifier.name=属性调节器
 custom.testmode.enemyattributemodifier.desc=调节非boss层生物的属性值。当前的设定：\n\n物理攻击：x%.2f +%.2f\n\n物理防御：x%.2f +%.2f\n\n命中能力：x%.2f +%.2f\n\n闪避能力：x%.2f +%.2f\n\n受到伤害：x%.2f +%.2f\n\n生命值：x%.2f +%.2f
