--- a/core/src/main/assets/messages/scenes/scenes_zh.properties
+++ b/core/src/main/assets/messages/scenes/scenes_zh.properties
@@ -113,7 +113,7 @@ scenes.startscene.sort_recent=排序：按时间
 
 scenes.supporterscene.title=支持游戏开发
 scenes.supporterscene.intro=我不希望蜕变地牢沾染任何广告或侵入性微交易要素。那些东西毁了不知多少免费游戏。相应地，我希望玩家们能对本游戏进行直接的支持！
-scenes.supporterscene.patreon_msg=如果您喜欢玩蜕地牢并且想要为本地牢提供建议，可以加入蜕变地牢交流群和开发者进行交流！\n\n你也可以在主页面的_关于蜕变地牢_界面获取群聊链接甚至是创意投稿链接，感谢您在百忙之中抽空拜访，祝地牢探险愉快！
+scenes.supporterscene.patreon_msg=如果您喜欢玩蜕变地牢并且想要为本地牢提供建议，可以加入蜕变地牢交流群和开发者进行交流！\n\n你也可以在主页面的_关于蜕变地牢_界面获取群聊链接甚至是创意投稿链接，感谢您在百忙之中抽空拜访，祝地牢探险愉快！
 scenes.supporterscene.patreon_english=(请注意：Patreon回报仅提供英文内容)
 scenes.supporterscene.supporter_link=前往蜕变地牢交流群。
 
