--- a/core/src/main/assets/messages/windows/windows_zh.properties
+++ b/core/src/main/assets/messages/windows/windows_zh.properties
@@ -346,9 +346,17 @@ windows.wndsettings$langstab.transifex=所有翻译都由_Transifex_网站上的
 windows.wndsettings$langstab.credits=制作名单
 windows.wndsettings$langstab.reviewers=审核员
 windows.wndsettings$langstab.translators=翻译员
+windows.wndsettings$uitab.hunger=饥饿条设置
+windows.wndsettings$uitab.hunger_prompt=饥饿ui设置
+windows.wndsettings$uitab.hunger_warning=饥饿条ui设置会在重启后生效
+windows.wndsettings$uitab.tpd=常规类型1
+windows.wndsettings$uitab.tpd1=常规类型2
+windows.wndsettings$uitab.tpd2=常规类型3
+windows.wndsettings$uitab.mc=MC类型
+windows.wndsettings$uitab.energy=能量类型
 
 windows.wndsupportprompt.title=来自开发者的留言
-windows.wndsupportprompt.intro=欢迎~希望您能在蜕变像素地牢中玩得开心！
+windows.wndsupportprompt.intro=欢迎~希望您能在蜕变地牢中玩得开心！
 windows.wndsupportprompt.close=关闭
 
 windows.wndtradeitem.buy=花%d金币购买
@@ -392,9 +400,10 @@ windows.wndvictorycongrats.start_text=恭喜您征服了这座地牢！新的游
 windows.wndvictorycongrats.challenges=您现在可以开启_挑战_功能了！挑战是一类通过各种方式为游戏增添难度的设置选项。
 windows.wndvictorycongrats.custom_seeds=您现在可以使用_自定义种子_进行游戏了！在版本不变的情况下，使用同一个种子将总是生成相同的地牢。
 windows.wndvictorycongrats.dailies=您现在可以参与_每日挑战_了！每天都有一场新游戏，对每个人都是一样的！
-windows.wndvictorycongrats.thank_you=万分感谢您能游玩破碎的像素地牢！
-windows.wndvictorycongrats.support_prompt=_请考虑赞助这款游戏_，如果您还没有的话。忠实玩家的支持能让开发者不断对游戏进行打磨！
-windows.wndvictorycongrats.support=赞助
+windows.wndvictorycongrats.thank_you=万分感谢您能游玩蜕变地牢！
+#windows.wndvictorycongrats.support_prompt=_请考虑赞助这款游戏_，如果您还没有的话。忠实玩家的支持能让开发者不断对游戏进行打磨！
+windows.wndvictorycongrats.support_prompt=_请考虑支持这款游戏并加群_，如果您还没有的话。忠实玩家的支持和反馈能让开发者不断对游戏进行打磨！
+windows.wndvictorycongrats.support=加群
 windows.wndvictorycongrats.close=关闭
 
 windows.wndwandmaker.dust=哦，我注意到你已经获得了尸尘！别担心那些怨灵，我能解决它们。就像我承诺的，你可以选择我制作的一根高品质法杖。
