--- a/core/src/main/assets/messages/plants/plants_zh.properties
+++ b/core/src/main/assets/messages/plants/plants_zh.properties
@@ -53,7 +53,7 @@ plants.rotberry$seed.name=腐莓之种
 plants.rotberry$seed.discover_hint=你可在某个任务中发现该物品。
 
 plants.sorrowmoss.name=断肠苔
-plants.sorrowmoss.desc=断肠苔（实为花卉而非苔藓）是一种花瓣利如刀片，表面覆有致命毒液的植物。
+plants.sorrowmoss.desc=断肠苔(实为花卉而非苔藓)是一种花瓣利如刀片，表面覆有致命毒液的植物。
 plants.sorrowmoss.warden_desc=_守望者_能将有害的毒素转化为短时的毒素之力。
 plants.sorrowmoss$seed.name=断肠苔之种
 
