--- a/core/src/main/assets/messages/actors/actors_zh.properties
+++ b/core/src/main/assets/messages/actors/actors_zh.properties
@@ -2953,6 +2953,27 @@ actors.mobs.warriorboss.defeated=还有...很多美食没吃...
 actors.mobs.warriorboss.wake=什么？开饭了？
 actors.mobs.warriorboss.kill=你被战士？的肉蛋葱鸡压成了肉饼...
 
+actors.mobs.rogueboss.name=盗贼？
+actors.mobs.rogueboss.desc=邪恶的古神善于掌握他人内心深处的欲望，并以此诱导他们走上黑暗之途，而盗贼……此刻的他正拿着天狗面具为赏金任务的完成而欣喜若狂，看来本应在牢房尽头的天狗已经被他杀死了。\n\n盗贼？擅长从暗影中发动致命伏击，而在情况于他不利时则会利用其敏捷的步伐快速远离敌人。\n\n在他潜入暗影中时，你将无法对他进行近战攻击，但未必不能尝试使用远程手段命中他。
+actors.mobs.rogueboss.notice=哈哈，又一个猎物上钩了!
+actors.mobs.rogueboss.invisibility=试着抓住我吧！
+actors.mobs.rogueboss.execute=吃我一刀！
+actors.mobs.rogueboss.angered=可恶……既然如此……
+actors.mobs.rogueboss.enraged=激怒
+actors.mobs.rogueboss.momentum=现在还能跟上我的步伐吗？
+actors.mobs.rogueboss.momentum-recovery=诶呦我去，累死我了……
+actors.mobs.rogueboss.kill=你被盗贼？的阴招捉弄至死……
+actors.mobs.rogueboss.spkill=你被盗贼？斩杀了……
+actors.mobs.rogueboss.executeninja=盗贼？：“忍者啊，莫怪我卑鄙。”
+actors.mobs.rogueboss.defeated=竟然会……比天狗还强……
+actors.mobs.rogueboss$absoluteinvisibility.name=影遁
+actors.mobs.rogueboss$absoluteinvisibility.spname=准备阶段
+actors.mobs.rogueboss$absoluteinvisibility.desc=盗贼？正使用他身上的暗影斗篷进入隐形状态。\n\n在此状态下，你无法对盗贼？直接进行近战攻击，但在受到物理远程或魔法伤害后会立即结束隐形。\n\n当前生命高于最大生命值的一半时，隐形状态下的盗贼？会进入准备阶段以在10回合后对你进行斩杀。而在当前生命低于最大生命值的一半后，隐形状态下的盗贼？的逸动效果持续时间不会自然降低。\n\n影遁效果剩余时长：%s回合。
+actors.mobs.rogueboss$absoluteinvisibility.spdesc=盗贼？正耐心等待着,准备从暗影中给出致命一击。\n\n在进行10回合的准备后,盗贼？会瞬间冲刺到你身边斩杀掉你绝大部分血量，这一击是无法被躲过的！所幸你的任何远程攻击都会打断他使他退出准备阶段。\n\n盗贼？已经准备了%s回合。
+actors.mobs.rogueboss$momentumtime.name=逸动
+actors.mobs.rogueboss$momentumtime.spname=逸动·恢复
+actors.mobs.rogueboss$momentumtime.desc=盗贼？正处于逸动状态，在此期间他会以两倍速进行移动，并拥有更高的闪避、命中属性与更高的伤害加成。\n\n所幸盗贼？每次受到攻击都会减少5回合逸动状态的持续时间，在逸动状态结束后，他会需要休息一段时间才能再进入逸动状态。\n\n效果剩余时长：%s回合。
+actors.mobs.rogueboss$momentumtime.spdesc=盗贼？刚刚结束了逸动状态，现在他需要休息一段时间，在此期间他会受到更高的伤害。\n\n不过不要大意，盗贼？在休息的同时仍会积蓄动量，在完全恢复后就会再次进入逸动状态。\n\n还需要休息%s回合。
 
 #slimegirl
 actors.hero.talent$resilientarmor.name=软韧护甲
@@ -3368,6 +3389,5 @@ actors.hero.talent.prim_accu.title=原始积累
 actors.hero.talent.prim_accu.desc=_+1：_签订契约的敌人物理攻击其他敌人时会给予绅士_10金币_。\n\n_+2：_签订契约的敌人物理攻击其他敌人时会给予绅士_20金币_。\n\n_+3：_签订契约的敌人物理攻击其他敌人时会给予绅士_30金币_。\n\n_+4：_签订契约的敌人物理攻击其他敌人时会给予绅士_40金币_。
 actors.hero.talent.soul_contract.title=灵魂契约
 actors.hero.talent.soul_contract.desc=_+1：_签订契约的敌人死亡后_会化作一个腐化的打工鬼_，而绅士则通过契约上无人在意的细节部分因此获得原本应是打工鬼的工伤补偿金共_100金币_。\n\n_+2：_在+1的基础上，打工鬼的腐化效果变为_终生卖命_效果。\n\n_+3：_在+2的基础上，打工鬼还会获得_随机一种精英_效果。\n\n_+4：_在+3的基础上，打工鬼的_最大生命值与其前生(原契约敌人)相当_。
-
 
 
