--- a/core/src/main/assets/messages/items/items_zh.properties
+++ b/core/src/main/assets/messages/items/items_zh.properties
@@ -2646,3 +2646,5 @@ items.remains.brokentool.name=损坏控件
 items.remains.brokentool.desc=这块已经损坏的金属控件曾经是某个机械造物所使用的工具。尽管有些不合常理，你仍可尝试连接这些外露电线以此来短暂地使用它，你可以用它产生一个与你完全相同的镜像。但在使用后，也就是电信号流通一瞬，它就会彻底失灵并随之碎裂而烟消云散。
 items.armor.dm400armor.name=英雄装甲
 items.armor.dm400armor.desc=装备这套高性能装甲时，DM-400能够施展一项特殊技能。
+
+items.potions.potion.no_healing=你感觉有些不适……最好不要再饮用更多药剂了。
