--- a/core/src/main/assets/messages/journal/journal_zh.properties
+++ b/core/src/main/assets/messages/journal/journal_zh.properties
@@ -24,7 +24,7 @@ journal.talentcatalog.t2.title=2层天赋
 journal.talentcatalog.t3.title=3层天赋
 journal.talentcatalog.boss.title=Boss天赋
 journal.talentcatalog.negative.title=负面天赋
-
+journal.talentcatalog.meta_this=\n\n你已获取到该天赋共计_%d_次
 
 journal.catalog.potions.title=药剂
 journal.catalog.scrolls.title=卷轴
